--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-scripts": "^3.0.1",
     "xml2js": "^0.4.19"
   },
   "scripts": {
